--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,21 @@
 </head>
 <body>
 	<div class="khung">
+		<div class="head">
+	<div class="logo">
+		<ul>
+			<li><a href="#"><h3>UDA CITY TAXI</h3></a></li>
+	</div>
+	<div class="menu">
+				<ul>
+		<li class="active"><a href="#">home</a></li>
+		<li><a href="#">service</a></li>
+		<li><a href="#">repair</a></li>
+		<li><a href="#">sale</a></li>
+		<li><a href="#">contact</a></li>
+				<ul>
+		</div>
+</div>
 	<!-- --menu Truong --- -->
 	<!-- ------------ hien------- -->
 	<!-- ----------luong----------- -->
