Da lam xong: hien

--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,28 @@
 	<div class="khung">
 	<!-- --menu Truong --- -->
 	<!-- ------------ hien------- -->
+		<div class="banner">
+			<div class="header1">
+				<h3>THE LARGEST TAXI SERVICES</h3>
+				<h1>
+					CITY TAXI
+				</h1>
+				<h2>COMPANY</h2>
+				<div class="morebanner">
+				<div class="whatwedo">
+					<a href="#"><p>WHAT WE DO?</p></a>
+				</div>
+				<div class="joinus">
+					<a href=""><p>JOIN US</p></a>
+				</div>
+			</div>
+			</div>
+			<div class="picture">
+					<img src=http://citytaxi.al/sites/default/files/superb_cta-300x2161_0_0.png>
+				</div>
+			</div>
+			
+		</div>
 	<!-- ----------luong----------- -->
 	<!-- -------hieu----------- -->
 	</div>
