Hieu anh da lam xong

--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,95 @@
 	<!-- ------------ hien------- -->
 	<!-- ----------luong----------- -->
 	<!-- -------hieu----------- -->
+	<div class="article">
+		<div class="line"></div>
+		<h3>POPULAR SERVICE</h3>
+		<p>Service Our Attitude And Attude is Everything</p>
+		<div class="content-top">
+			<div class="content-img">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>CALL ON TAXI</h4>
+				<div class="content-line"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<a href="javascipt:;" class="active">BOOK NOW</a>
+			</div>
+			<div class="content-img diff1">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>CALL ON TAXI</h4>
+				<div class="content-line"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<a href="javascipt:;" class="active">BOOK NOW</a>
+			</div>
+			<div class="content-img diff2">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>CALL ON TAXI</h4>
+				<div class="content-line"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<a href="javascipt:;" class="active">BOOK NOW</a>
+			</div>
+			<div class="content-img">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>CALL ON TAXI</h4>
+				<div class="content-line"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<a href="javascipt:;" class="active">BOOK NOW</a>
+			</div>
+		</div>
+		<div class="line-mid"></div>
+		<div class="content-bottom">
+			<div class="content-img">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>NEW YOUR CITY</h4>
+				<div class="content-line1"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<div class="content-line1"></div>
+				<a href="javascipt:;" class="active">READ MORE</a>
+			</div>
+			<!-- hinh2 -->
+			<div class="content-img diff1">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>NEW YOUR CITY</h4>
+				<div class="content-line1"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<div class="content-line1" ></div>
+				<a href="javascipt:;" class="active">READ MORE</a>
+			</div>
+			<!-- hinh3 -->
+			<div class="content-img diff2">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>NEW YOUR CITY</h4>
+				<div class="content-line1"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<div class="content-line1"></div>
+				<a href="javascipt:;" class="active">READ MORE</a>
+			</div>
+			<!-- hinh4 -->
+			<div class="content-img">
+				<a href="javascript:;"><img src="https://www.pralognan-agence.com/diaporama/taxi.jpg"></a>
+				<h4>NEW YOUR CITY</h4>
+				<div class="content-line1"></div>
+				<p class="content">With HTML you can create your own Website.
+	This tutorial teaches you everything about HTML.
+	HTML is easy to learn - You will enjoy it.</p>
+				<div class="content-line1"></div>
+				<a href="javascipt:;" class="active">READ MORE</a>
+			</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
